--- a/templates/pantryform.html
+++ b/templates/pantryform.html
@@ -1,8 +1,21 @@
+{% extends 'base.html' %}
 {% block body %}
 
-<h1>Welcome to MyPantry!</h1>
+<div id="fright">
+    <h2> What items do you have on hand in your pantry? </h2>
+   
+  <form action="/pantryitems" method="GET">
+    <label for="addpantryingredients">Select ingredients and see which recipes you can cook</label>
+    <select multiple class="form-control" id="addpantryingredients" name ="addpantryingredients">
+          
+      {% for ingredient in ingredients %}
+          <option>{{ ingredient.name }}</option>
+      {% endfor %}
+  </select>
 
-<h2></h2>
-
+  <button type="submit" class="btn btn-primary mb-2" id="entry-submit">I'm feelin lucky</button>
+  
+  </form>
+</div>
 
 {% endblock %}
