--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,11 +6,11 @@
 
 
 <div class="homepage">
-  <div class="container-fluid">
+
    
-      <div class="imageContainer">
-        <div class="d-flex p-2"></div>
-        <img src="static/img/MyPantry.jpg" class="homepage-image"/>
+      <div class="image-container">
+        <!-- <div class = "text">An easy way to decide what to cook!</div> -->
+        <!-- <img src="static/img/MyPantry.jpg" class="homepage-image"/> -->
        
           </div>
         
@@ -18,14 +18,14 @@
 <!-- Log in modal -->
 <div class="log-in-form-modal">
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Log In
+<button type="button" class="text" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Enter MyPantry 
 </button>
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Log In</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Please log In</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -36,8 +36,8 @@
             <p><input type="password" name="password"></p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary">Log In</button>
+        <!-- <button type="button" class="btn btn-secondary" id = "entry-submit-form" data-bs-dismiss="modal">Close</button> -->
+        <button type="submit" class="btn btn-primary" id = "entry-submit-form">Log In</button>
         </form>
       </div>
     </div>
