--- a/templates/search.html
+++ b/templates/search.html
@@ -11,7 +11,7 @@
        
     {% else %}
         Sorry, no recipes found. 
-        <a href= "/users/{{ session.user_id }}">Would you like to add a recipe?</a>
+        <a href= "/addarecipe">Would you like to add a recipe?</a>
 
 {% endif %}
     
